...
        ? Container(
            height: size.height * 0.4,
            alignment: Alignment.center,
            child: CircularProgressIndicator(),
          )
        : SingleChildScrollView(
            key: const Key('paymentTypesBSheet'),
            child: Column(
              children: [
                Padding(
                  padding: const EdgeInsets.all(8.0),
                  child: Row(
                    children: [
...
                      ),
                      SizedBox(height: size.height * 0.03),
                      if (payMetCtrl.paymentTypes.isNotEmpty)
                        const OrDividerWidget(),
                      SizedBox(height: size.height * 0.03),
                      EjaraButtonWidget(
                        key: const Key('addWalletKey'),
                        text: "Another mobile money method",
                        icon: Icon(
                          Remix.add_line,
                          color: theme.secondaryColor,
                        ),
                        onPressed: () {
...
