...
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
              buildHeader(
                context: context,
                theme: theme,
                size: 0.01,
                header: 'Choose a payment method',
              ),
              _buildPaymentCard(theme, size, user),
              SizedBox(height: size.height * 0.02),
              Text(
                "Select a payment method",
                style: theme.subtitle1.copyWith(color: theme.primaryColor),
...
